# potion

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  flake.nix  sdkconfig.defaults
components/lcd/: CMakeLists.txt  lcd.cpp
components/lcd/include/: lcd.hpp
components/pins/: CMakeLists.txt  pins.cpp
components/pins/include/: pin_layout.hpp  pins.hpp
components/potentiometer/: CMakeLists.txt  potentiometer.cpp  potentiometer.hpp
components/potentiometer/include/: potentiometer.hpp
components/rgb_led/: CMakeLists.txt  rgb_led.cpp
components/rgb_led/include/: rgb_led.hpp
components/touch/: CMakeLists.txt  touch.cpp  touch.hpp
components/touch/include/: touch.hpp
main/: CMakeLists.txt  idf_component.yml  potion.cpp
scripts/: format_files.py  resolve_includes.py
src/: main.zig
